# computer_club

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
include/: club.hpp  utils.hpp  validator.hpp
samples/: test_data2_CRLF.txt
src/: club.cpp  main.cpp  utils.cpp  validator.cpp
tests/: CMakeLists.txt  test_club.cpp  test_utils.cpp  test_validator.cpp
